[workspace]
resolver = "3"
members = ["blinky"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/hispark-rs/ws63-examples"

[workspace.dependencies]
ws63-pac = "0.1"
hisi-riscv-hal = "0.3"
hisi-riscv-rt  = "0.2"
riscv = "0.13"
riscv-rt = "0.14"
embedded-hal = "1.0.0"
