[package]
name = "async_bus"
version = "0.1.0"
edition = "2024"
description = "WS63 async SPI/I2C demo (embedded-hal-async SpiBus + I2c, loopback under block_on)"
license = "MIT"

[[bin]]
name = "async_bus"
path = "src/main.rs"

[dependencies]
ws63-pac = { path = "../../../crates/pac/ws63-pac" }
hisi-riscv-hal = { path = "../../../crates/hisi-riscv-hal", features = ["chip-ws63", "async", "unstable"] }
hisi-riscv-rt  = { path = "../../../crates/hisi-riscv-rt" }
embedded-hal-async = "1.0"
riscv = "0.13"

[profile.release]
opt-level = "s"
lto = true
