[package]
name = "blinky"
version = "0.1.0"
edition = "2024"
description = "WS63 LED blinky example"
license = "MIT"

[[bin]]
name = "blinky"
path = "src/main.rs"

[dependencies]
ws63-pac = { path = "../../ws63-pac" }
hisi-riscv-hal = { path = "../../hisi-riscv-hal" }
hisi-riscv-rt  = { path = "../../hisi-riscv-rt" }
embedded-hal = "1.0.0"
riscv = "0.13"

[profile.release]
opt-level = "s"
lto = true
