[package]
name = "custom_memory"
version = "0.1.0"
edition = "2024"
description = "WS63 example that supplies its OWN memory.x (hisi-riscv-rt's bundled memory.x disabled)"
license = "MIT"

[[bin]]
name = "custom_memory"
path = "src/main.rs"

[dependencies]
ws63-pac = { path = "../../../crates/pac/ws63-pac" }
hisi-riscv-hal = { path = "../../../crates/hisi-riscv-hal", features = ["chip-ws63"] }
# default-features = false turns OFF hisi-riscv-rt's `bundled-memory-x`, so hisi-riscv-rt does
# NOT put its memory.x on the link search path. This crate supplies its own (see
# build.rs + memory.x). We must re-select `chip-ws63` (also a default feature) so
# hisi-riscv-rt still emits the WS63 device.x + re-exports the WS63 interrupt enum.
# hisi-riscv-rt still provides layout.ld / device.x / startup / ws63-link.x and the
# critical-section impl.
hisi-riscv-rt  = { path = "../../../crates/hisi-riscv-rt", default-features = false, features = ["chip-ws63"] }
riscv = "0.13"

[profile.release]
opt-level = "s"
lto = true
