[package]
name = "custom_memory"
version = "0.1.0"
edition = "2024"
description = "WS63 example that supplies its OWN memory.x (hisi-riscv-rt's bundled memory.x disabled)"
license = "MIT"

[[bin]]
name = "custom_memory"
path = "src/main.rs"

[dependencies]
ws63-pac = { path = "../../../crates/pac/ws63-pac" }
hisi-hal = { path = "../../../crates/hisi-hal", features = ["chip-ws63"] }
# default-features = false turns OFF hisi-riscv-rt's `bundled-memory-x`, so hisi-riscv-rt does
# NOT put its memory.x on the link search path. This crate supplies its own (see
# build.rs + memory.x). We must re-select `chip-ws63` so hisi-riscv-rt re-exports
# the WS63 interrupt enum and selects the WS63 adapter. ws63-pac/rt owns device.x;
# hisi-riscv-rt still provides layout.ld / startup / hisi-riscv-link.x and the
# critical-section impl.
hisi-riscv-rt  = { path = "../../../crates/hisi-riscv-rt", default-features = false, features = ["chip-ws63"] }
riscv = "0.13"
