[package]
name = "dma_loopback"
version = "0.1.0"
edition = "2024"
description = "WS63 DMA example: peripheral-paced mem<->SPI loopback (MDMA) + SDMA channel"
license = "MIT"

[[bin]]
name = "dma_loopback"
path = "src/main.rs"

[dependencies]
ws63-pac = { path = "../../../crates/pac/ws63-pac" }
hisi-riscv-hal = { path = "../../../crates/hisi-riscv-hal", features = ["chip-ws63"] }
hisi-riscv-rt = { path = "../../../crates/hisi-riscv-rt" }
riscv = "0.13"
