[package]
name = "gpio_irq"
version = "0.1.0"
edition = "2024"
description = "WS63 GPIO interrupt example (GPIO0 pin0 -> IRQ 33, a custom local IRQ >=32)"
license = "MIT"

[[bin]]
name = "gpio_irq"
path = "src/main.rs"

[dependencies]
ws63-pac = { path = "../../../crates/pac/ws63-pac" }
hisi-riscv-hal = { path = "../../../crates/hisi-riscv-hal", features = ["chip-ws63"] }
hisi-riscv-rt = { path = "../../../crates/hisi-riscv-rt", default-features = false, features = ["chip-ws63", "bundled-memory-x"] }
riscv = "0.13"
