[package]
name = "i2c_scan"
version = "0.1.0"
edition = "2024"
description = "WS63 I2C0 bus-scan example (probes 7-bit addresses, reports ACKs)"
license = "MIT"

[[bin]]
name = "i2c_scan"
path = "src/main.rs"

[dependencies]
ws63-hal = { path = "../../ws63-hal" }
ws63-rt  = { path = "../../ws63-rt" }
riscv = "0.13"

[profile.release]
opt-level = "s"
lto = true
