[package]
name = "i2c_scan"
version = "0.1.0"
edition = "2024"
description = "WS63 I2C0 bus-scan example (probes 7-bit addresses, reports ACKs)"
license = "MIT"

[[bin]]
name = "i2c_scan"
path = "src/main.rs"

[dependencies]
hisi-riscv-hal = { path = "../../../crates/hisi-riscv-hal", features = ["chip-ws63"] }
hisi-riscv-rt  = { path = "../../../crates/hisi-riscv-rt" }
riscv = "0.13"
