[package]
name = "reset_demo"
version = "0.1.0"
edition = "2024"
description = "WS63 system-reset example (software_reset + reset_reason), for ws63-qemu"
license = "MIT"

[[bin]]
name = "reset_demo"
path = "src/main.rs"

[dependencies]
ws63-pac = { path = "../../ws63-pac" }
ws63-hal = { path = "../../ws63-hal" }
ws63-rt  = { path = "../../ws63-rt" }

[profile.release]
opt-level = "s"
