[package]
name = "reset_demo"
version = "0.1.0"
edition = "2024"
description = "WS63 system-reset example (software_reset + reset_reason), for ws63-qemu"
license = "MIT"

[[bin]]
name = "reset_demo"
path = "src/main.rs"

[dependencies]
ws63-pac = { path = "../../../crates/pac/ws63-pac" }
hisi-riscv-hal = { path = "../../../crates/hisi-riscv-hal", features = ["chip-ws63", "unstable"] }
hisi-riscv-rt  = { path = "../../../crates/hisi-riscv-rt" }

[profile.release]
opt-level = "s"
