[package]
name = "rf_port_demo"
version = "0.1.0"
edition = "2024"
description = "WS63 phase-4 demo: exercises the ws63-rf-rs porting layer + links the vendor Wi-Fi ROM blob through it"
license = "MIT"

[[bin]]
name = "rf_port_demo"
path = "src/main.rs"

[dependencies]
ws63-pac = { path = "../../../crates/pac/ws63-pac" }
hisi-riscv-hal = { path = "../../../crates/hisi-riscv-hal" }
hisi-riscv-rt = { path = "../../../crates/hisi-riscv-rt" }
ws63-rf-rs = { path = "../../../chips/ws63/rf" }
critical-section = "1"
riscv = "0.13"
