[package]
name = "rf_port_demo"
version = "0.1.0"
edition = "2024"
description = "WS63 RF porting demo: exercises allocator, securec, and logging shims"
license = "MIT"

[[bin]]
name = "rf_port_demo"
path = "src/main.rs"

[dependencies]
ws63-pac = { path = "../../../crates/pac/ws63-pac" }
hisi-hal = { path = "../../../crates/hisi-hal", features = ["chip-ws63"] }
hisi-riscv-rt = { path = "../../../crates/hisi-riscv-rt", default-features = false, features = ["chip-ws63", "bundled-memory-x"] }
ws63-rf-rs = { path = "../../../chips/ws63/rf" }
critical-section = "1"
riscv = "0.13"
