[package]
name = "rtos_embassy_coexist"
version = "0.1.0"
edition = "2024"
description = "WS63 HIL for one RTOS scheduler hosting Embassy and native tasks"
license = "MIT"

[[bin]]
name = "rtos_embassy_coexist"
path = "src/main.rs"

[dependencies]
critical-section = "1"
embassy-executor = { version = "0.10", features = ["platform-riscv32", "executor-thread"] }
embassy-time = { version = "0.5", features = ["tick-hz-1_000_000"] }
hisi-alloc = { path = "../../../crates/hisi-alloc" }
hisi-hal = { path = "../../../crates/hisi-hal", features = ["chip-ws63", "unstable"] }
hisi-panic-handler = { path = "../../../crates/hisi-panic-handler", default-features = false, features = ["panic-uart0"] }
hisi-rf-rtos-driver = { path = "../../../crates/hisi-rf-rtos-driver" }
hisi-riscv-rt = { path = "../../../crates/hisi-riscv-rt", default-features = false, features = ["chip-ws63", "bundled-memory-x", "boot-header"] }
hisi-rtos = { path = "../../../crates/hisi-rtos", features = ["embassy"] }
static_cell = "2"
