[package]
name = "spi_loopback"
version = "0.1.0"
edition = "2024"
description = "WS63 blocking SPI0 loopback example (two-stage clock, full-duplex transfer)"
license = "MIT"

[[bin]]
name = "spi_loopback"
path = "src/main.rs"

[dependencies]
hisi-riscv-hal = { path = "../../../crates/hisi-riscv-hal", features = ["chip-ws63"] }
hisi-riscv-rt = { path = "../../../crates/hisi-riscv-rt", default-features = false, features = ["chip-ws63", "bundled-memory-x"] }
riscv = "0.13"
