[package]
name = "timer_irq"
version = "0.1.0"
edition = "2024"
description = "WS63 timer-interrupt example (TIMER_0 -> IRQ 26 -> ISR), for ws63-qemu"
license = "MIT"

[[bin]]
name = "timer_irq"
path = "src/main.rs"

[dependencies]
ws63-pac = { path = "../../../crates/pac/ws63-pac" }
hisi-hal = { path = "../../../crates/hisi-hal", features = ["chip-ws63"] }
hisi-riscv-rt = { path = "../../../crates/hisi-riscv-rt", default-features = false, features = ["chip-ws63", "bundled-memory-x"] }
riscv = "0.13"
