[package]
name = "uart_hello"
version = "0.1.0"
edition = "2024"
description = "WS63 UART hello-world example (prints over UART0)"
license = "MIT"

[[bin]]
name = "uart_hello"
path = "src/main.rs"

[dependencies]
ws63-pac = { path = "../../../crates/pac/ws63-pac" }
hisi-riscv-hal = { path = "../../../crates/hisi-riscv-hal" }
hisi-riscv-rt  = { path = "../../../crates/hisi-riscv-rt" }
riscv = "0.13"

[profile.release]
opt-level = "s"
lto = true
