[package]
name = "uart_hello"
version = "0.1.0"
edition = "2024"
description = "WS63 UART hello-world example (prints over UART0)"
license = "MIT"

[[bin]]
name = "uart_hello"
path = "src/main.rs"

[dependencies]
ws63-pac = { path = "../../../crates/chips/ws63/ws63-pac" }
hisi-hal = { path = "../../../crates/hisi-hal", features = ["chip-ws63"] }
hisi-riscv-rt = { path = "../../../crates/hisi-riscv-rt", default-features = false, features = ["chip-ws63", "bundled-memory-x", "boot-header"] }
hisi-panic-handler = { path = "../../../crates/hisi-panic-handler", default-features = false, features = ["panic-uart0"] }
riscv = "0.13"
