[package]
name = "wifi_blob_link"
version = "0.1.0"
edition = "2024"
description = "WS63 phase-3 spike: statically link the vendor Wi-Fi ROM data blob (ws63-rf-rs/ws63-RF/lib/libwifi_rom_data.a) and resolve its external symbols"
license = "MIT"

[[bin]]
name = "wifi_blob_link"
path = "src/main.rs"

[dependencies]
ws63-pac = { path = "../../../crates/pac/ws63-pac" }
hisi-riscv-hal = { path = "../../../crates/hisi-riscv-hal", features = ["chip-ws63"] }
hisi-riscv-rt = { path = "../../../crates/hisi-riscv-rt" }
riscv = "0.13"
