[package]
name = "wifi_blob_link"
version = "0.1.0"
edition = "2024"
description = "WS63 phase-3 spike: statically link the vendor Wi-Fi ROM data blob selected by ws63-radio-sys"
license = "MIT"

[[bin]]
name = "wifi_blob_link"
path = "src/main.rs"

[dependencies]
ws63-pac = { path = "../../../crates/pac/ws63-pac" }
hisi-hal = { path = "../../../crates/hisi-hal", features = ["chip-ws63"] }
hisi-riscv-rt = { path = "../../../crates/hisi-riscv-rt", default-features = false, features = ["chip-ws63", "bundled-memory-x"] }
riscv = "0.13"
ws63-radio-sys = { path = "../../../crates/ws63-radio-sys/crates/ws63-radio-sys" }
