[package]
name = "wifi_init_smoke"
version = "0.1.0"
edition = "2024"
description = "WS63 RF smoke: link the vendor Wi-Fi init closure and call uapi_wifi_init"
license = "MIT"

[features]
default = []
# Pulls the full vendor Wi-Fi init closure into the final executable and calls
# `uapi_wifi_init`. The full image must be built through the guarded RF script,
# which lets stock rust-lld choose the layout and patches the vendor custom
# relocations before a layout-verification relink.
full-init = ["ws63-rf-rs/net", "ws63-radio-sys/wifi"]
# Run the protected-network smoke through the vendor WPA supplicant.
wpa = ["full-init", "ws63-rf-rs/wpa", "ws63-radio-sys/wpa2-personal"]
# Opt-in wrappers and high-volume traces for diagnosing the vendor closure.
# Keep this out of the normal scan path: synchronous UART from hot paths can
# perturb the RF timing it is intended to observe.
rf-init-diag = ["full-init", "ws63-rf-rs/rf-init-diag"]
rf-watchpoint-gate = ["full-init"]
rf-queue-guard = ["full-init", "ws63-rf-rs/rf-queue-guard"]
# Emit early RT startup UART markers (`RT0!`..`RT4!`) before the HAL UART driver
# is constructed. This is a bring-up diagnostic, not part of the normal smoke.
startup-trace = ["hisi-riscv-rt/startup-uart-trace"]

[[bin]]
name = "wifi_init_smoke"
path = "src/main.rs"

[dependencies]
hisi-rom-sys = { version = "0.1.0-alpha.3", features = ["chip-ws63"] }
hisi-hal = { path = "../../../crates/hisi-hal", features = ["chip-ws63", "unstable"] }
hisi-riscv-rt = { path = "../../../crates/hisi-riscv-rt", default-features = false, features = ["chip-ws63", "bundled-memory-x", "boot-header", "ws63-bgle-32k"] }
hisi-panic-handler = { path = "../../../crates/hisi-panic-handler", features = ["panic-uart0"] }
hisi-rf-rtos-driver = "0.1.0-alpha.1"
ws63-rf-rs = { path = "../../../chips/ws63/rf" }
ws63-radio-sys = { path = "../../../crates/chips/ws63/ws63-radio-sys/crates/ws63-radio-sys", default-features = false }
