[package]
name = "wifi_init_smoke"
version = "0.1.0"
edition = "2024"
description = "WS63 RF smoke: link the vendor Wi-Fi init closure and call uapi_wifi_init"
license = "MIT"

[features]
default = []
# Pulls the full vendor Wi-Fi init closure into the final executable and calls
# `uapi_wifi_init`. The full image must be built through the guarded RF script,
# which lets stock rust-lld choose the layout and patches the vendor custom
# relocations before a layout-verification relink.
full-init = ["ws63-rf-rs/net", "ws63-radio-sys/wifi"]
# Compile the pinned upstream hostap native port against the scan-only WS63
# driver path. This intentionally excludes the legacy WPA archives; W2 adds
# RX/event/context gates before this becomes the default protected-network path.
upstream-supplicant = ["full-init", "ws63-rf-rs/upstream-supplicant-port"]
# Shared internal station path selected by the concrete WPA2 or WPA3 profile.
personal = []
# Run the protected-network smoke through the vendor WPA supplicant.
wpa = ["personal", "full-init", "ws63-rf-rs/wpa", "ws63-radio-sys/wpa2-personal"]
# Link the W2 WPA3-Personal/SAE candidate. This remains a guarded bring-up
# feature until pure WPA3 HIL passes on a controlled AP.
wpa3 = ["personal", "full-init", "ws63-rf-rs/wifi-wpa3-personal", "ws63-radio-sys/wpa3-personal"]
# Forward vendor Wi-Fi diagnostics to UART0. Keep this opt-in: the vendor log
# callbacks are synchronous, so enabling them changes scheduler and RF timing.
rf-vendor-log = ["full-init"]
# Opt-in wrappers and high-volume traces for diagnosing the vendor closure.
# Keep this out of the normal scan path: synchronous UART from hot paths can
# perturb the RF timing it is intended to observe.
rf-init-diag = ["full-init", "ws63-rf-rs/rf-init-diag"]
rf-eloop-diag = ["full-init", "ws63-rf-rs/rf-eloop-diag"]
rf-auth-scan-filter = ["rf-eloop-diag", "ws63-rf-rs/rf-auth-scan-filter"]
rf-watchpoint-gate = ["full-init"]
rf-queue-guard = ["full-init", "ws63-rf-rs/rf-queue-guard"]
# Emit early RT startup UART markers (`RT0!`..`RT4!`) before the HAL UART driver
# is constructed. This is a bring-up diagnostic, not part of the normal smoke.
startup-trace = ["hisi-riscv-rt/startup-uart-trace"]

[[bin]]
name = "wifi_init_smoke"
path = "src/main.rs"

[dependencies]
hisi-rom-sys = { version = "0.1.0-alpha.3", features = ["chip-ws63"] }
hisi-hal = { path = "../../../crates/hisi-hal", features = ["chip-ws63", "unstable"] }
hisi-riscv-rt = { path = "../../../crates/hisi-riscv-rt", default-features = false, features = ["chip-ws63", "bundled-memory-x", "boot-header", "ws63-bgle-32k"] }
hisi-panic-handler = { path = "../../../crates/hisi-panic-handler", features = ["panic-uart0"] }
hisi-rf = { version = "0.1.0-alpha.1", features = ["smoltcp"] }
hisi-rf-rtos-driver = "0.1.0-alpha.4"
hisi-rtos = "0.1.0-alpha.3"
smoltcp = { version = "0.13", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
] }
static_cell = "2"
ws63-rf-rs = { path = "../../../chips/ws63/rf" }
ws63-radio-sys = { path = "../../../crates/chips/ws63/ws63-radio-sys/crates/ws63-radio-sys", default-features = false }
